[gd_scene load_steps=33 format=2]

[ext_resource path="res://spoo_world/assets/audio/level2.mp3" type="AudioStream" id=1]
[ext_resource path="res://spoo_world/assets/icon/music.png" type="Texture" id=2]
[ext_resource path="res://spoo_world/assets/img/numeros/numero3.png" type="Texture" id=3]
[ext_resource path="res://spoo_world/world/levels/level2/level2.gd" type="Script" id=4]
[ext_resource path="res://spoo_world/assets/icon/arrow_back50.png" type="Texture" id=5]
[ext_resource path="res://spoo_world/assets/img/numeros/numero1.png" type="Texture" id=6]
[ext_resource path="res://spoo_world/assets/img/numeros/numero6.png" type="Texture" id=7]
[ext_resource path="res://spoo_world/assets/img/numeros/numero4.png" type="Texture" id=8]
[ext_resource path="res://spoo_world/assets/img/paisaje2.png" type="Texture" id=9]
[ext_resource path="res://spoo_world/assets/img/numeros/numero2.png" type="Texture" id=10]
[ext_resource path="res://spoo_world/assets/img/numeros/numero7.png" type="Texture" id=11]
[ext_resource path="res://spoo_world/assets/img/numeros/numero5.png" type="Texture" id=12]
[ext_resource path="res://spoo_world/assets/img/numeros/numero8.png" type="Texture" id=13]
[ext_resource path="res://spoo_world/assets/img/numeros/numero9.png" type="Texture" id=14]
[ext_resource path="res://spoo_world/assets/icon/label.png" type="Texture" id=15]
[ext_resource path="res://spoo_world/assets/img/spoo/Derecho_Abierto.png" type="Texture" id=16]
[ext_resource path="res://spoo_world/assets/img/spoo/Derecho_Cerrado.png" type="Texture" id=17]
[ext_resource path="res://spoo_world/assets/icon/arrow_start.png" type="Texture" id=18]
[ext_resource path="res://spoo_world/assets/icon/restart.png" type="Texture" id=19]
[ext_resource path="res://spoo_world/assets/icon/nomusic.png" type="Texture" id=20]
[ext_resource path="res://spoo_world/assets/audio/cinco.wav" type="AudioStream" id=21]
[ext_resource path="res://spoo_world/assets/audio/ocho.wav" type="AudioStream" id=22]
[ext_resource path="res://spoo_world/assets/audio/seis.wav" type="AudioStream" id=23]
[ext_resource path="res://spoo_world/assets/audio/siete.wav" type="AudioStream" id=24]
[ext_resource path="res://spoo_world/assets/audio/uno.wav" type="AudioStream" id=25]
[ext_resource path="res://spoo_world/assets/audio/cuatro.wav" type="AudioStream" id=26]
[ext_resource path="res://spoo_world/assets/audio/dos.wav" type="AudioStream" id=27]
[ext_resource path="res://spoo_world/assets/audio/nueve.wav" type="AudioStream" id=28]
[ext_resource path="res://spoo_world/assets/audio/trees.wav" type="AudioStream" id=29]
[ext_resource path="res://spoo_world/assets/typography/GameOfSquids-1GMVL.ttf" type="DynamicFontData" id=30]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 30 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 16 ) ],
"loop": true,
"name": "parpadear",
"speed": 5.0
} ]

[node name="level2" type="Node2D"]
script = ExtResource( 4 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 640, 400 )
scale = Vector2( 1.33333, 1.48148 )
texture = ExtResource( 9 )

[node name="AudioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 2.496
autoplay = true

[node name="back" type="Button" parent="."]
margin_left = 7.0
margin_top = 9.0
margin_right = 81.0
margin_bottom = 96.0
focus_mode = 0
mouse_filter = 1
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="area_dibujo" type="ColorRect" parent="."]
margin_left = 426.0
margin_top = 111.0
margin_right = 874.0
margin_bottom = 655.0
color = Color( 0.937255, 0.937255, 0.937255, 1 )

[node name="numero1" type="Polygon2D" parent="."]
visible = false
position = Vector2( -70, -17 )
scale = Vector2( 1.03125, 1.08333 )
polygon = PoolVector2Array( 757.331, 211.385, 757.331, 564.925, 753.452, 575.079, 746.664, 581.54, 738.907, 585.233, 729.21, 587.079, 708.846, 587.079, 700.119, 584.31, 692.361, 578.771, 687.513, 573.233, 686.543, 564.925, 685.574, 268.616, 680.725, 265.847, 676.846, 267.693, 659.392, 284.309, 649.695, 288.924, 633.21, 290.77, 623.513, 287.078, 615.756, 281.539, 609.937, 273.232, 607.998, 264.924, 612.847, 254.77, 619.634, 245.539, 627.392, 240.001, 700.119, 192.001, 709.816, 188.308, 719.513, 185.539, 728.24, 184.616, 737.937, 186.462, 748.604, 192.924, 754.422, 200.308 )

[node name="numero1_img" type="Sprite" parent="."]
visible = false
position = Vector2( 642.5, 393.25 )
scale = Vector2( 0.819178, 0.750366 )
texture = ExtResource( 6 )

[node name="numero2" type="Polygon2D" parent="."]
visible = false
position = Vector2( -1, 53.3619 )
scale = Vector2( 1, 0.980952 )
polygon = PoolVector2Array( 579, 150.505, 565, 162.738, 553, 179.049, 547, 189.243, 541, 198.417, 538, 219.825, 538, 233.078, 541, 242.252, 546, 250.408, 553, 255.505, 562, 257.544, 569, 256.524, 576, 254.485, 582, 250.408, 587, 246.33, 590, 239.194, 594, 229, 597, 217.786, 602, 208.612, 609, 199.437, 617, 191.282, 626, 186.184, 635, 182.107, 646, 179.049, 657, 177.01, 670, 178.029, 684, 182.107, 696, 190.262, 709, 199.437, 717, 210.65, 722, 222.883, 723, 238.175, 721, 252.447, 718, 264.68, 712, 278.951, 707, 290.165, 697, 303.417, 579, 434.922, 548, 469.583, 540, 482.835, 536, 499.146, 535, 512.398, 541, 526.67, 548, 536.864, 561, 542.981, 568, 545.019, 578, 545.019, 751, 546.039, 768, 546.039, 782, 545.019, 789, 540.942, 794, 534.825, 796, 528.709, 798, 519.534, 798, 509.34, 798, 500.165, 791, 486.913, 783, 481.816, 743, 481.816, 611, 482.835, 607, 479.777, 608, 474.68, 669, 412.495, 701, 377.835, 731, 348.272, 744, 331.961, 754, 316.67, 765, 297.301, 773, 277.932, 779, 257, 780, 243, 781, 221.864, 778, 203.515, 772, 186.184, 764, 170.893, 754, 157.641, 742, 146.427, 729, 138.272, 712, 130.117, 696, 125.019, 676, 121.961, 663, 121.961, 651, 121.961, 634, 125.019, 616, 130.117, 602, 136.233 )

[node name="Numero2_img" type="Sprite" parent="."]
visible = false
position = Vector2( 660, 384 )
scale = Vector2( 0.805276, 0.786284 )
texture = ExtResource( 10 )

[node name="numero3" type="Polygon2D" parent="."]
visible = false
position = Vector2( 6.10352e-05, 0 )
polygon = PoolVector2Array( 537, 265, 535, 285, 537, 293, 542, 302, 551, 307, 562, 310, 573, 310, 581, 307, 587, 297, 590, 283, 596, 271, 610, 257, 627, 250, 644, 247, 662, 248, 682, 255, 698, 271, 703, 286, 704, 304, 703, 315, 699, 326, 694, 334, 686, 343, 678, 349, 667, 353, 658, 356, 646, 357, 636, 360, 632, 371, 632, 385, 635, 402, 645, 406, 656, 406, 669, 408, 683, 412, 691, 415, 700, 422, 709, 430, 716, 447, 721, 467, 720, 483, 717, 501, 711, 514, 704, 524, 693, 535, 678, 543, 657, 548, 633, 547, 614, 539, 601, 525, 592, 511, 587, 498, 580, 485, 569, 481, 554, 481, 544, 483, 535, 488, 527, 498, 527, 512, 530, 521, 534, 532, 546, 549, 551, 556, 560, 565, 577, 577, 599, 589, 635, 597, 669, 596, 700, 589, 726, 577, 740, 567, 750, 556, 760, 544, 771, 527, 779, 507, 781, 489, 783, 470, 781, 451, 777, 435, 772, 421, 759, 399, 746, 386, 732, 379, 724, 376, 725, 371, 734, 368, 746, 358, 755, 350, 760, 337, 763, 323, 764, 306, 763, 287, 751, 254, 736, 232, 718, 217, 693, 206, 671, 200, 650, 197, 628, 198, 605, 202, 587, 209, 572, 217, 556, 232, 546.931, 245.138 )

[node name="Numero3_img" type="Sprite" parent="."]
visible = false
position = Vector2( 656.5, 392.25 )
scale = Vector2( 0.800487, 0.783361 )
texture = ExtResource( 3 )

[node name="numero4" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, 3.05176e-05 )
polygon = PoolVector2Array( 526, 200, 527, 190, 535, 180, 543, 174, 556, 172, 570, 174, 580, 180, 586, 191, 588, 201, 587, 406, 677, 407, 677, 199, 678, 191, 681, 184, 687, 178, 695, 173, 706, 171, 720, 173, 730, 179, 736, 189, 738, 199, 738, 407, 771, 407, 783, 408, 795, 415, 802, 426, 803, 439, 803, 455, 798, 467, 789, 474, 782, 476, 738, 477.353, 738, 567, 732, 582, 721, 589, 708, 590, 696, 590, 687, 585, 680, 577, 677, 565, 677, 476, 549.664, 476, 539, 473, 534, 466, 529, 460, 526, 447.882 )

[node name="Numero4_img" type="Sprite" parent="."]
visible = false
position = Vector2( 652, 385 )
scale = Vector2( 0.752788, 0.842797 )
texture = ExtResource( 8 )

[node name="numero5" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, 16 )
polygon = PoolVector2Array( 763, 192, 768, 204, 767, 225, 762, 235, 755, 242, 745, 246, 595, 246, 595, 323, 610, 315, 624, 310, 644, 307, 665, 305, 691, 310, 716, 317, 731, 324, 749, 338, 767, 362, 777, 384, 785, 413, 788, 440, 786, 470, 779, 496, 771, 513, 757, 537, 741, 556, 722, 570, 705, 578, 679, 586, 654, 588, 615, 583, 583, 569, 561, 553, 542, 536, 532, 526, 527, 513, 524, 499, 524, 484, 529, 472, 537, 466, 547, 464, 559, 467, 570, 476, 580, 491, 598, 506, 615, 516, 635, 523, 658, 525, 681, 522, 703, 510, 715, 494, 724, 472, 728, 446, 728, 425, 723, 406, 714, 390, 701, 378, 680, 369, 656, 365, 636, 367, 616, 373, 600, 383, 586, 398, 576, 402, 556, 402, 545, 398, 539, 390, 535.889, 379.112, 535, 203, 542, 190, 549, 183, 560.113, 178.22, 747, 179, 757, 185 )

[node name="Numero5_img" type="Sprite" parent="."]
visible = false
position = Vector2( 646, 389 )
scale = Vector2( 0.733528, 0.816356 )
texture = ExtResource( 12 )

[node name="numero6" type="Polygon2D" parent="."]
visible = false
position = Vector2( -3.94067, 4.57764e-05 )
polygon = PoolVector2Array( 630.941, 192, 655.941, 184, 676.941, 180, 695.941, 179, 703.941, 178, 712.941, 179, 722.941, 183, 726.941, 188, 729.941, 195, 730.941, 203, 730.941, 211, 727.941, 223, 723.941, 230, 718.941, 233, 711.941, 236, 702.941, 237, 693.941, 237, 680, 240, 666.941, 243, 659.941, 246, 651.941, 250, 642.941, 255, 625.941, 266, 609.941, 282, 599.941, 295, 589.941, 311, 581.941, 330, 575.941, 352, 575.941, 356, 577.941, 359, 580.941, 360, 584.941, 357, 589.941, 352, 601.941, 344, 609.941, 339, 617.941, 335, 627.941, 331, 636.941, 328, 645.941, 326, 656.941, 325, 670.941, 324, 685.941, 325, 698.941, 328, 714.941, 333, 723.941, 337, 732.941, 342, 745.941, 351, 756.941, 362, 764.941, 372, 772.941, 383, 780.941, 399, 788.941, 421, 791.941, 439, 792.941, 457, 792.941, 472, 790.941, 489, 785.941, 509, 782.941, 519, 776.941, 532, 768.941, 548, 757.941, 563, 745.941, 574, 730.941, 586, 712.941, 595, 698.941, 600, 689.941, 602, 674.941, 606, 656.941, 607, 639.941, 606, 621.941, 604, 607.941, 600, 599.941, 597, 584.941, 591, 573.941, 584, 565.941, 578, 554.941, 567, 545.941, 556, 538.941, 545, 530.941, 530, 524.941, 517, 518.941, 497, 512.941, 462, 510.941, 439, 511.941, 416, 512.941, 392, 516.941, 368, 522.941, 336, 527.941, 317, 534.941, 301, 546.941, 275, 566.941, 246, 578.941, 231, 590.941, 219, 610.941, 203 )

[node name="Numero6_img" type="Sprite" parent="."]
visible = false
position = Vector2( 637.629, 372.712 )
scale = Vector2( 0.781083, 0.848848 )
texture = ExtResource( 7 )

[node name="numero7" type="Polygon2D" parent="."]
visible = false
position = Vector2( 24, 0 )
polygon = PoolVector2Array( 495, 191, 489, 193, 482, 198, 477, 205, 474, 214, 474, 225, 474, 233, 476, 239, 480, 247, 485, 251, 491, 254, 497, 256, 682, 256, 653, 333, 638, 373, 619, 421, 587, 504, 570, 551, 570, 559, 571, 564, 574, 571, 578, 575, 582, 578, 588, 581, 596, 584, 602, 586, 609, 586, 616, 584, 621, 581, 625, 578, 629, 572, 651, 514, 665, 476, 686, 423, 706, 368, 734, 296, 751, 252, 759, 231, 760, 222, 758, 216, 754, 206, 750, 200, 744, 194, 735, 191, 641, 191 )

[node name="Numero7_img" type="Sprite" parent="."]
visible = false
position = Vector2( 656, 371 )
scale = Vector2( 0.786364, 0.818342 )
texture = ExtResource( 11 )

[node name="numero8" type="Polygon2D" parent="."]
visible = false
position = Vector2( 8, 0 )
polygon = PoolVector2Array( 593, 593, 612, 596, 633, 597, 649, 596, 663, 595, 673, 592, 688, 588, 698, 584, 716, 574, 727, 565, 739, 553, 747, 542, 754, 531, 758, 520, 762, 509, 764, 499, 765, 485, 765, 462, 763, 449, 761, 436, 758, 428, 754, 418, 749, 408, 743, 399, 736, 392, 729, 385, 721, 380, 712, 376, 705, 374, 699, 373, 697, 370, 697, 366, 700, 364, 710, 360, 722, 352, 730, 344, 738, 334, 743, 323, 746, 312, 748, 298, 749, 279, 744, 256, 739, 239, 732, 226, 725, 216, 715, 206, 697, 194, 685, 189, 673, 185, 661, 183, 647, 182, 621, 182, 596, 184, 578, 189, 566, 194, 556, 201, 544, 211, 535, 221, 525, 238, 519, 255, 516, 270, 515, 286, 516, 301, 518, 317, 522, 328, 528, 340, 537, 349, 546, 357, 564, 366, 567, 368, 567, 373, 565, 375, 558, 376, 545, 381, 534, 388, 527, 395, 518, 405, 512, 413, 508, 421, 503, 432, 499, 444, 497, 455, 496, 469, 496, 484, 497, 499, 501, 512, 504, 520, 509, 533, 516, 543, 525, 556, 535, 565, 544, 572, 555, 580, 567, 585, 581, 590 )

[node name="Numero8_img" type="Sprite" parent="."]
visible = false
position = Vector2( 646, 381 )
scale = Vector2( 0.770967, 0.84873 )
texture = ExtResource( 13 )

[node name="numero9" type="Polygon2D" parent="."]
visible = false
position = Vector2( 0, -13.3662 )
scale = Vector2( 1, 0.985916 )
polygon = PoolVector2Array( 713, 602.857, 727.174, 611.996, 752.564, 611.99, 767, 600.829, 773, 588.657, 772, 287, 770, 275, 766, 263, 761, 253, 755, 242, 750, 234, 745, 226, 738, 218, 729, 210, 717, 202, 705, 195, 689, 190, 674, 188, 657, 187, 644, 187, 629, 188, 616, 191, 598, 197, 579, 205, 565, 213, 550, 224, 536, 240, 526, 255, 519, 269, 513, 285, 508, 301, 507, 318, 507, 345, 510, 367.543, 517, 390.871, 524, 408.114, 532, 422.314, 541, 434.486, 560, 450.714, 579, 460.857, 593, 466.943, 611, 472.014, 630, 474.043, 647, 474.043, 659, 473.029, 672, 468.971, 683, 463.9, 694, 458.829, 706, 450.714, 706.868, 590.388 )

[node name="Numero9_img" type="Sprite" parent="."]
visible = false
position = Vector2( 644, 373 )
scale = Vector2( 0.784671, 0.857594 )
texture = ExtResource( 14 )

[node name="puntos" type="Sprite" parent="."]
position = Vector2( 1012.75, 72 )
scale = Vector2( 1.27949, 1 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="puntos_l" type="Label" parent="puntos"]
margin_left = -53.7324
margin_top = -8.0
margin_right = 2.26764
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "0/20"

[node name="spoo" type="AnimatedSprite" parent="."]
position = Vector2( 128, 664 )
scale = Vector2( 0.11, 0.11 )
frames = SubResource( 1 )
animation = "parpadear"

[node name="verificar" type="TextureButton" parent="."]
margin_left = 1008.0
margin_top = 296.0
margin_right = 1144.0
margin_bottom = 416.0
texture_normal = ExtResource( 18 )
expand = true

[node name="vaciar" type="TextureButton" parent="."]
margin_left = 1024.0
margin_top = 512.0
margin_right = 1120.0
margin_bottom = 616.0
texture_normal = ExtResource( 19 )
expand = true

[node name="lines" type="Node2D" parent="."]

[node name="TButton_Music" type="TextureButton" parent="."]
margin_left = 1149.0
margin_top = 38.0
margin_right = 1226.0
margin_bottom = 117.0
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 20 )
expand = true

[node name="AudioUno" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 25 )

[node name="AudioDos" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )

[node name="AudioTres" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )

[node name="AudioCuatro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )

[node name="AudioCinco" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )

[node name="AudioSeis" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="AudioSiete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="AudioOcho" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="AudioNueve" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="verificar" to="." method="_on_verificar_pressed"]
[connection signal="pressed" from="vaciar" to="." method="_on_vaciar_pressed"]
[connection signal="pressed" from="TButton_Music" to="." method="_on_TButton_Music_pressed"]
